@@ -66,6 +66,10 @@
      validate ports for LocalForward/RemoteForward.
      add host/port alternative syntax for IPv6 (like -L/-R).
      ok markus@
+   - stevesk@cvs.openbsd.org 2001/08/30 20:36:34
+     [auth-options.c sshd.8]
+     validate ports for permitopen key file option. add host/port
+     alternative syntax for IPv6. ok markus@
 
 20010815
  - (bal) Fixed stray code in readconf.c that went in by mistake.
@@ -6389,4 +6393,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1504 2001/09/12 18:01:59 mouring Exp $
+$Id: ChangeLog,v 1.1505 2001/09/12 18:03:31 mouring Exp $
